force-app/main/default/objects/Verification_Case__c/fields/Found_Item__c.field-meta.xml
<CustomField>
    <fullName>Found_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Found Item</label>
    <referenceTo>Found_Item__c</referenceTo>
    <relationshipLabel>Verification Cases</relationshipLabel>
    <relationshipName>Verification_Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>