force-app/main/default/objects/Verification_Case__c/fields/Related_Lost_Item__c.field-meta.xml
<CustomField>
    <fullName>Related_Lost_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A link to the specific lost item record being verified.</description>
    <label>Related Lost Item</label>
    <referenceTo>Lost_Item__c</referenceTo>
    <relationshipLabel>Verification Cases</relationshipLabel>
    <relationshipName>Related_Verification_Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>